--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/THESOUTHVEGFINAL.jpg" />
+    <link rel="icon" type="image/png" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The South Veg | Pure Vegetarian Restaurant in Perinthalmanna</title>
     <meta name="description"
