--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="The South Veg" />
     <meta property="og:url" content="https://www.thesouthveg.com" />
-    <meta property="og:image" content="https://www.thesouthveg.com/cover.jpg" />
+    <meta property="og:image" content="./public/og-image.jpg" />
 </head>
 
 <body>
